--- a/ALTC-Site/appsettings.json
+++ b/ALTC-Site/appsettings.json
@@ -8,7 +8,8 @@
     "ComplainCollection": "Complain",
     "RequestCollection": "Request",
     "StaticCollection3": "StaticCollection3",
-    "Department": "Department-IT"
+    "Department": "Department-IT",
+    "TeamCollection": "Team"
 
 
   },
