--- a/ALTC-Site/appsettings.json
+++ b/ALTC-Site/appsettings.json
@@ -1,6 +1,6 @@
 {
   "altcwebsite": {
-    "ConnectionString": "mongodb+srv://dev2:ic0v5mAhlHpATSlP@cluster0.gsqun6w.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "altcwebsite",
     "TechnicalCollection": "TechnicalSupport",
     "JobCandidateCollection3": "JobCandidate3",
@@ -9,7 +9,8 @@
     "RequestCollection": "Request",
     "StaticCollection3": "StaticCollection3",
     "Department": "Department-IT",
-    "TeamCollection": "Team"
+    "TeamCollection": "Team",
+    "AccountCollection": "Account"
 
 
   },
