--- a/ALTC-Site/appsettings.json
+++ b/ALTC-Site/appsettings.json
@@ -9,7 +9,8 @@
     "RequestCollection": "Request",
     "StaticCollection3": "StaticCollection3",
     "Department": "Department-IT",
-    "TeamCollection": "Team"
+    "TeamCollection": "Team",
+    "LoginCollection": "Login"
 
 
   },
