ltr - rtl direction (joe)

--- a/ALTC-Site/appsettings.json
+++ b/ALTC-Site/appsettings.json
@@ -1,6 +1,6 @@
 {
   "altcwebsite": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb+srv://dev2:ic0v5mAhlHpATSlP@cluster0.gsqun6w.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "altcwebsite",
     "TechnicalCollection": "TechnicalSupport",
     "JobCandidateCollection3": "JobCandidate3",
