--- a/ALTC-Site/ALTC_Website.csproj
+++ b/ALTC-Site/ALTC_Website.csproj
@@ -8,16 +8,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Areas\Admin\Views\Home\**" />
     <Compile Remove="wwwroot\Admin\**" />
+    <Content Remove="Areas\Admin\Views\Home\**" />
     <Content Remove="wwwroot\Admin\**" />
+    <EmbeddedResource Remove="Areas\Admin\Views\Home\**" />
     <EmbeddedResource Remove="wwwroot\Admin\**" />
+    <None Remove="Areas\Admin\Views\Home\**" />
     <None Remove="wwwroot\Admin\**" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="Areas\Admin\Views\Job\Index.cshtml" />
     <None Include="Areas\Admin\Views\Job\pro.cshtml" />
-    <None Include="Areas\Admin\Views\Home\Index.cshtml" />
     <None Include="Areas\Admin\Views\Shared\_LayoutAdmin.cshtml" />
     <None Include="Areas\Admin\Views\Shared\_ValidationScriptsPartial.cshtml" />
     <None Include="Areas\Admin\Views\TechnicalSupport\Index.cshtml" />
