--- a/ALTC-Site/appsettings.json
+++ b/ALTC-Site/appsettings.json
@@ -10,7 +10,9 @@
     "StaticCollection3": "StaticCollection3",
     "Department": "Department-IT",
     "TeamCollection": "Team",
-    "AccountCollection": "Account"
+    "AccountCollection": "Account",
+    "ServiceCollection": "Service"
+
 
 
   },
